# SmartNotes

./: .gitignore  README.md
backend/: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/app/auth/: auth_routes.py  auth_schema.py  auth_service.py  jwt_helper.py
backend/app/models/: models.py  websocket_manager.py
backend/app/routes/: access_document_routes.py  directory_routes.py  document_routes.py  user_routes.py  websocket.py
backend/app/schemas/: access_document.py  directory_schema.py  document_schema.py  user_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 0d2d1c23c799_cascade_behaviour_added.py  32436975f31b_modified_access_document.py  37c16e256dcb_kk.py  3c2d06d9586d_access_document_created.py  3d65f730b989_dirs_and_document_created.py  43abd182dfe9_migrating_schemas.py  4f4ec622d0cc_modified_access_document2.py  6c60db311add_create_users.py  8987f1032d1d_modified_access_document3.py  9fe72edd3a3a_is_stared_added_in_directory.py  d2317057fef5_create_schemas.py  d6cc6987da9f_is_stared_fill_added_and_update_some_.py  feaf36004a45_constraint_updated_for_document_name.py  fedf53dd8925_create_users_2.py
fronted/: .env  index.html  package-lock.json  package.json
fronted/src/: App.jsx
fronted/src/components/: Breadcrumb.jsx  CreateItemModel.jsx  DocumentEditor.jsx  Editor.jsx  EditorFooter.jsx  EditorHeader.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Layout.jsx  Login.jsx  Navbar.jsx  SignUp.jsx  (+7 more)
(+27 files in other folders)
